# neat

./: .gitignore  CLAUDE.md  README.md  config.nims  install.sh  install_gym.sh  justfile  neat.nimble  pyproject.toml  setup.py  train_cheetah.py  train_lunar.py  train_neat_xor.py  train_snake.py
.github/workflows/: test.yml  wheels.yml
neat/: __init__.py  neat.py  neat_nim.nim
tests/: nim_test_neat  nim_test_neat.nim  test_neat.nim  test_neat.py
