[project]
name = "neat"
version = "0.0.1"
description = "(Hyper)NEAT"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'neuroevolutionary algorithms',
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "einx>=0.3.0",
    "einops>=0.8.1",
    "nimporter",
    "jax",
    "jaxlib",
    "jaxtyping",
]

[project.urls]
Homepage = "https://pypi.org/project/x-neat/"
Repository = "https://github.com/lucidrains/neat"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

gym = [
    "box2d-py",
    "gymnasium[box2d]>=1.0.0",
    "gymnasium[jax]",
    "moviepy>=1.0.3",
    "numpy>=2.2.5",
    "swig",
    "tqdm",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["neat"]
